syntax = "proto3";

package catalog.v1;

option go_package = "github.com/MuhibNayem/Travio/server/api/proto/catalog/v1";

// CatalogService manages transportation network data
service CatalogService {
  // Station Management
  rpc CreateStation(CreateStationRequest) returns (Station);
  rpc GetStation(GetStationRequest) returns (Station);
  rpc ListStations(ListStationsRequest) returns (ListStationsResponse);
  rpc UpdateStation(UpdateStationRequest) returns (Station);
  rpc DeleteStation(DeleteStationRequest) returns (DeleteStationResponse);
  
  // Route Management
  rpc CreateRoute(CreateRouteRequest) returns (Route);
  rpc GetRoute(GetRouteRequest) returns (Route);
  rpc ListRoutes(ListRoutesRequest) returns (ListRoutesResponse);
  rpc UpdateRoute(UpdateRouteRequest) returns (Route);
  rpc DeleteRoute(DeleteRouteRequest) returns (DeleteRouteResponse);
  
  // Trip Management
  rpc CreateTrip(CreateTripRequest) returns (Trip);
  rpc GetTrip(GetTripRequest) returns (Trip);
  rpc ListTrips(ListTripsRequest) returns (ListTripsResponse);
  rpc UpdateTrip(UpdateTripRequest) returns (Trip);
  rpc CancelTrip(CancelTripRequest) returns (Trip);
  
  // Search (for frontend)
  rpc SearchTrips(SearchTripsRequest) returns (SearchTripsResponse);

  // Recurring Schedules
  rpc CreateSchedule(CreateScheduleRequest) returns (Schedule);
  rpc GetSchedule(GetScheduleRequest) returns (Schedule);
  rpc ListSchedules(ListSchedulesRequest) returns (ListSchedulesResponse);
  rpc UpdateSchedule(UpdateScheduleRequest) returns (Schedule);
  rpc DeleteSchedule(DeleteScheduleRequest) returns (DeleteScheduleResponse);
  rpc AddScheduleException(AddScheduleExceptionRequest) returns (ScheduleException);
  rpc ListScheduleExceptions(ListScheduleExceptionsRequest) returns (ListScheduleExceptionsResponse);
  rpc GenerateTripInstances(GenerateTripInstancesRequest) returns (GenerateTripInstancesResponse);
  rpc ListTripInstances(ListTripInstancesRequest) returns (ListTripInstancesResponse);
  rpc CreateSchedules(BulkCreateSchedulesRequest) returns (BulkCreateSchedulesResponse);
  rpc GetScheduleHistory(GetScheduleHistoryRequest) returns (GetScheduleHistoryResponse);
}

// --- Station ---

message Station {
  string id = 1;
  string organization_id = 2;  // Multi-tenant
  string code = 3;             // e.g., "DHA" for Dhaka
  string name = 4;
  string city = 5;
  string state = 6;
  string country = 7;
  double latitude = 8;
  double longitude = 9;
  string timezone = 10;
  string address = 11;
  repeated string amenities = 12;  // ["parking", "food_court", "wifi"]
  StationStatus status = 13;
  int64 created_at = 14;
  int64 updated_at = 15;
}

enum StationStatus {
  STATION_STATUS_UNSPECIFIED = 0;
  STATION_STATUS_ACTIVE = 1;
  STATION_STATUS_INACTIVE = 2;
  STATION_STATUS_UNDER_CONSTRUCTION = 3;
}

message CreateStationRequest {
  string organization_id = 1;
  string code = 2;
  string name = 3;
  string city = 4;
  string state = 5;
  string country = 6;
  double latitude = 7;
  double longitude = 8;
  string timezone = 9;
  string address = 10;
  repeated string amenities = 11;
}

message GetStationRequest {
  string id = 1;
  string organization_id = 2;
}

message ListStationsRequest {
  string organization_id = 1;
  string city = 2;           // Filter by city
  int32 page_size = 3;
  string page_token = 4;
  string search_query = 5;   // Filter by name, code, or city (fuzzy)
}

message ListStationsResponse {
  repeated Station stations = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

message UpdateStationRequest {
  string id = 1;
  string organization_id = 2;
  string name = 3;
  string address = 4;
  repeated string amenities = 5;
  StationStatus status = 6;
}

message DeleteStationRequest {
  string id = 1;
  string organization_id = 2;
}

message DeleteStationResponse {
  bool success = 1;
}

// --- Route ---

message Route {
  string id = 1;
  string organization_id = 2;
  string code = 3;              // e.g., "DHA-CTG-001"
  string name = 4;              // "Dhaka to Chittagong Express"
  string origin_station_id = 5;
  string destination_station_id = 6;
  repeated RouteStop intermediate_stops = 7;
  int32 distance_km = 8;
  int32 estimated_duration_minutes = 9;
  RouteStatus status = 10;
  int64 created_at = 11;
  int64 updated_at = 12;
}

message RouteStop {
  string station_id = 1;
  int32 sequence = 2;
  int32 arrival_offset_minutes = 3;   // Minutes from departure
  int32 departure_offset_minutes = 4;
  int32 distance_from_origin_km = 5;
}

enum RouteStatus {
  ROUTE_STATUS_UNSPECIFIED = 0;
  ROUTE_STATUS_ACTIVE = 1;
  ROUTE_STATUS_INACTIVE = 2;
  ROUTE_STATUS_SUSPENDED = 3;
}

message CreateRouteRequest {
  string organization_id = 1;
  string code = 2;
  string name = 3;
  string origin_station_id = 4;
  string destination_station_id = 5;
  repeated RouteStop intermediate_stops = 6;
  int32 distance_km = 7;
  int32 estimated_duration_minutes = 8;
}

message GetRouteRequest {
  string id = 1;
  string organization_id = 2;
}

message ListRoutesRequest {
  string organization_id = 1;
  string origin_station_id = 2;
  string destination_station_id = 3;
  int32 page_size = 4;
  string page_token = 5;
}

message ListRoutesResponse {
  repeated Route routes = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

message UpdateRouteRequest {
  string id = 1;
  string organization_id = 2;
  string name = 3;
  repeated RouteStop intermediate_stops = 4;
  int32 estimated_duration_minutes = 5;
  RouteStatus status = 6;
}

message DeleteRouteRequest {
  string id = 1;
  string organization_id = 2;
}

message DeleteRouteResponse {
  bool success = 1;
}

// --- Trip ---

message Trip {
  string id = 1;
  string organization_id = 2;
  string route_id = 3;
  string vehicle_id = 4;           // Bus/Train number
  string vehicle_type = 5;         // "bus", "train", "ferry"
  string vehicle_class = 6;        // "economy", "business", "ac"
  int64 departure_time = 7;        // Unix timestamp
  int64 arrival_time = 8;
  int32 total_seats = 9;
  int32 available_seats = 10;
  TripPricing pricing = 11;
  TripStatus status = 12;
  repeated TripSegment segments = 13;  // For segment-based inventory
  int64 created_at = 14;
  int64 updated_at = 15;
  string schedule_id = 16;
  string service_date = 17;         // YYYY-MM-DD (local to schedule timezone)
}

message TripPricing {
  int64 base_price_paisa = 1;      // Price in smallest unit (paisa)
  int64 tax_paisa = 2;
  int64 booking_fee_paisa = 3;
  string currency = 4;             // "BDT", "INR"
  map<string, int64> class_prices = 5; // {"economy": 50000, "ac": 80000}
  map<string, int64> seat_category_prices = 6; // {"vip": 120000, "window": 90000}
  repeated SegmentPricing segment_prices = 7;
}

message SegmentPricing {
  string from_station_id = 1;
  string to_station_id = 2;
  int64 base_price_paisa = 3;
  map<string, int64> class_prices = 4;
  map<string, int64> seat_category_prices = 5;
}

message TripSegment {
  int32 segment_index = 1;
  string from_station_id = 2;
  string to_station_id = 3;
  int64 departure_time = 4;
  int64 arrival_time = 5;
  int32 available_seats = 6;
}

enum TripStatus {
  TRIP_STATUS_UNSPECIFIED = 0;
  TRIP_STATUS_SCHEDULED = 1;
  TRIP_STATUS_BOARDING = 2;
  TRIP_STATUS_DEPARTED = 3;
  TRIP_STATUS_IN_TRANSIT = 4;
  TRIP_STATUS_ARRIVED = 5;
  TRIP_STATUS_CANCELLED = 6;
  TRIP_STATUS_DELAYED = 7;
}

message CreateTripRequest {
  string organization_id = 1;
  string route_id = 2;
  string vehicle_id = 3;
  string vehicle_type = 4;
  string vehicle_class = 5;
  int64 departure_time = 6;
  int32 total_seats = 7;
  TripPricing pricing = 8;
}

message GetTripRequest {
  string id = 1;
  string organization_id = 2;
}

message ListTripsRequest {
  string organization_id = 1;
  string route_id = 2;
  int64 departure_after = 3;   // Unix timestamp
  int64 departure_before = 4;
  TripStatus status = 5;
  int32 page_size = 6;
  string page_token = 7;
  string schedule_id = 8;
  string service_date = 9;      // YYYY-MM-DD
}

message ListTripsResponse {
  repeated Trip trips = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

message UpdateTripRequest {
  string id = 1;
  string organization_id = 2;
  int64 departure_time = 3;
  TripPricing pricing = 4;
  TripStatus status = 5;
}

message CancelTripRequest {
  string id = 1;
  string organization_id = 2;
  string reason = 3;
}

// --- Search ---

message SearchTripsRequest {
  string organization_id = 1;     // Optional: search all or specific operator
  string origin_city = 2;
  string destination_city = 3;
  int64 travel_date = 4;          // Unix timestamp (date only)
  int32 passengers = 5;
  string vehicle_type = 6;        // Filter by bus/train/ferry
  string vehicle_class = 7;       // Filter by class
  SortOrder sort_by = 8;
  int32 page_size = 9;
  string page_token = 10;
}

enum SortOrder {
  SORT_ORDER_UNSPECIFIED = 0;
  SORT_ORDER_DEPARTURE_ASC = 1;
  SORT_ORDER_DEPARTURE_DESC = 2;
  SORT_ORDER_PRICE_ASC = 3;
  SORT_ORDER_PRICE_DESC = 4;
  SORT_ORDER_DURATION_ASC = 5;
}

message SearchTripsResponse {
  repeated TripSearchResult results = 1;
  string next_page_token = 2;
  int32 total_count = 3;
  SearchFilters available_filters = 4;
}

message TripSearchResult {
  Trip trip = 1;
  Route route = 2;
  Station origin_station = 3;
  Station destination_station = 4;
  string operator_name = 5;
}

// --- Schedules ---

message Schedule {
  string id = 1;
  string organization_id = 2;
  string route_id = 3;
  string vehicle_id = 4;
  string vehicle_type = 5;
  string vehicle_class = 6;
  int32 total_seats = 7;
  TripPricing pricing = 8;
  int32 departure_minutes = 9;     // Minutes since midnight
  int32 arrival_offset_minutes = 10;
  string timezone = 11;
  string start_date = 12;          // YYYY-MM-DD
  string end_date = 13;            // YYYY-MM-DD
  int32 days_of_week = 14;         // Bitmask, Mon=1..Sun=64
  ScheduleStatus status = 15;
  int64 created_at = 16;
  int64 updated_at = 17;
  int32 version = 18;
}

enum ScheduleStatus {
  SCHEDULE_STATUS_UNSPECIFIED = 0;
  SCHEDULE_STATUS_ACTIVE = 1;
  SCHEDULE_STATUS_INACTIVE = 2;
}

message CreateScheduleRequest {
  string organization_id = 1;
  string route_id = 2;
  string vehicle_id = 3;
  string vehicle_type = 4;
  string vehicle_class = 5;
  int32 total_seats = 6;
  TripPricing pricing = 7;
  int32 departure_minutes = 8;
  int32 arrival_offset_minutes = 9;
  string timezone = 10;
  string start_date = 11;
  string end_date = 12;
  int32 days_of_week = 13;
}

message ScheduleDefinition {
  string route_id = 1;
  string vehicle_id = 2;
  string vehicle_type = 3;
  string vehicle_class = 4;
  int32 total_seats = 5;
  TripPricing pricing = 6;
  int32 departure_minutes = 7;
  int32 arrival_offset_minutes = 8;
  string timezone = 9;
  string start_date = 10;
  string end_date = 11;
  int32 days_of_week = 12;
}

message BulkCreateSchedulesRequest {
  string organization_id = 1;
  repeated ScheduleDefinition schedules = 2;
}

message BulkCreateSchedulesResponse {
  repeated Schedule schedules = 1;
  int32 created_count = 2;
}

message GetScheduleRequest {
  string id = 1;
  string organization_id = 2;
}

message ListSchedulesRequest {
  string organization_id = 1;
  string route_id = 2;
  ScheduleStatus status = 3;
  int32 page_size = 4;
  string page_token = 5;
}

message ListSchedulesResponse {
  repeated Schedule schedules = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

message UpdateScheduleRequest {
  string id = 1;
  string organization_id = 2;
  int32 total_seats = 3;
  TripPricing pricing = 4;
  int32 departure_minutes = 5;
  int32 arrival_offset_minutes = 6;
  string timezone = 7;
  string start_date = 8;
  string end_date = 9;
  int32 days_of_week = 10;
  ScheduleStatus status = 11;
}

message DeleteScheduleRequest {
  string id = 1;
  string organization_id = 2;
}

message DeleteScheduleResponse {
  bool success = 1;
}

message ScheduleException {
  string id = 1;
  string schedule_id = 2;
  string service_date = 3;   // YYYY-MM-DD
  bool is_added = 4;
  string reason = 5;
  int64 created_at = 6;
}

message AddScheduleExceptionRequest {
  string schedule_id = 1;
  string organization_id = 2;
  string service_date = 3;
  bool is_added = 4;
  string reason = 5;
}

message ListScheduleExceptionsRequest {
  string schedule_id = 1;
  string organization_id = 2;
}

message ListScheduleExceptionsResponse {
  repeated ScheduleException exceptions = 1;
}

message GenerateTripInstancesRequest {
  string schedule_id = 1;
  string organization_id = 2;
  string start_date = 3;   // YYYY-MM-DD
  string end_date = 4;     // YYYY-MM-DD
}

message GenerateTripInstancesResponse {
  repeated Trip trips = 1;
  int32 created_count = 2;
}

message ListTripInstancesRequest {
  string organization_id = 1;
  string schedule_id = 2;
  string route_id = 3;
  string start_date = 4;   // YYYY-MM-DD
  string end_date = 5;     // YYYY-MM-DD
  TripStatus status = 6;
  int32 page_size = 7;
  string page_token = 8;
}

message ListTripInstancesResponse {
  repeated TripSearchResult results = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

message SearchFilters {
  repeated string vehicle_types = 1;
  repeated string vehicle_classes = 2;
  int64 min_price = 3;
  int64 max_price = 4;
  repeated string operators = 5;
}

message ScheduleVersion {
  string id = 1;
  string schedule_id = 2;
  int32 version = 3;
  Schedule snapshot = 4;
  int64 created_at = 5;
}

message GetScheduleHistoryRequest {
  string schedule_id = 1;
  string organization_id = 2;
}

message GetScheduleHistoryResponse {
  repeated ScheduleVersion versions = 1;
}
